--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ form .rox .choix {
   width: 100%;
 }
 form .btn {
-  background-color: #9fa09b;
+  background-color: #e4e4e3;
   color: black;
   box-shadow: 2px 2px #f55628;
   width: 200px !important;
@@ -373,7 +373,7 @@ form .btn:active {
   height: 34vh;
   margin: 0 0 5% 0;
   background-color: #494c4d;
-  color: #9fa09b;
+  color: #e4e4e3;
   text-shadow: 1px 1px black;
   font-family: "Crimson Text", serif;
   padding-top: 1%;
@@ -406,7 +406,7 @@ form .btn:active {
 }
 .footer .left .icon .fab {
   text-decoration: none;
-  color: #9fa09b;
+  color: #e4e4e3;
   font-size: 3.5vw;
   text-align: center;
 }
