--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -58,6 +58,11 @@ body {
         border-color: $darkGrey;
         border-width: 2px 0;
         display: flex;
+        &:hover {
+            border-color: $orange;
+            border-width: 6px 0;
+            transition: 0.5s;
+        }
         h1 {
             height: 100%;
             display: flex;
@@ -71,13 +76,21 @@ body {
             img {
                 width: 15vw;
             }
+            &:hover {
+                background-color: rgba(255, 255, 255);
+                transition: 0.5s;
+                img {
+                    transform: scale(1.2);
+                    transition: 0.5s;
+                }
+            }
         }
     }
     
 }
 
 nav {
-    margin-top: 5%;
+    margin-top: 10%;
     width: 100%;
     background-color: $white;
     padding-top: 2%;
@@ -207,11 +220,6 @@ form {
     select {
         padding: 5px;
         margin-left: 5px;
-    }
-    .rox{
-        .choix {
-            width: 100%;
-        }
     }
     /* .glyphicon {
         color: $white;
